# text-to-chart

./: .env.example  .gitignore  README.md  __main__.py  cli.py  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
admin_ui/: __init__.py  app.py
api/: __init__.py  main.py  models.py  storage.py  usage.py
api/db/: __init__.py  schema.py
api/middleware/: __init__.py  auth.py  rate_limit.py
api/routers/: account.py  admin.py  charts.py
api/saas/: __init__.py  jwt.py  repository.py
chart_service/: __init__.py  models.py
chart_service/chart_types/: __init__.py  bar_chart.py  base.py  line_chart.py  pie_chart.py  registry.py  scatter_chart.py
chart_service/exporters/: __init__.py  code.py  embed.py  image.py
chart_service/llm/: __init__.py  client.py  prompts.py  schema.py
chart_service/parsers/: __init__.py  base.py  csv_parser.py  excel_parser.py  image_parser.py  registry.py  text_parser.py
chart_service/plotters/: __init__.py  bar_plotter.py  base.py  line_plotter.py  pie_plotter.py  registry.py  scatter_plotter.py
chart_service/plotters/addons/: __init__.py  base.py  (+3 more)
docs/: DEVELOPMENT.md  README.md  USAGE.md
streamlit_app/: __init__.py  app.py  styles.css
tests/: test_account.py  test_addons.py  test_admin.py  test_api.py  test_auth.py  test_chart_types.py  test_cli.py  test_config.py  test_edge_cases.py  test_exporters.py  test_image_parser.py  test_integration.py  test_llm_client.py  test_models.py  test_parsers.py  test_plotters.py  test_rate_limit.py  test_storage.py  test_usage_tracker.py
tests/fixtures/: README.md
